# slm-api-server

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
slm_api/: app.py
src/slm_api/: app.py
tests/: test_health.py
